<resources>
    <string name="mapbox_access_token">pk.eyJ1IjoiaW5jaWRlbmNlIiwiYSI6ImNrcGVkZ2N0cTFxN3QycGxseDByeHB4MTIifQ.r6JVDWZcx5zmzqqShAhbIA</string>
    <string name="app_name">IncidenceAPP</string>
    <string name="nombre_app">IncidenceAPP</string>
    <string name="welcome_slide_1_title">Crea una cuenta</string>
    <string name="welcome_slide_1_subtitle">Añade tus datos personales, los datos de tu vehículo y tu seguro</string>
    <string name="welcome_slide_2_title">Sincroniza tu baliza</string>
    <string name="welcome_slide_2_subtitle">Activa tu localización y vincula tu baliza Help Flash u otros dispositivos compatibles</string>
    <string name="welcome_slide_3_title">Reporta incidencias</string>
    <string name="welcome_slide_3_subtitle">Recibe asistencia en carretera en caso de avería o llamaremos a emergencias en caso de accidente</string>
    <string name="next">Siguiente</string>
    <string name="create_account">Crear cuenta</string>
    <string name="create_one_account">Crear una cuenta</string>
    <string name="create_new_account">Crear nueva cuenta</string>
    <string name="create_account_step1">Datos personales</string>
    <string name="create_account_step2">Vehículo y seguro</string>
    <string name="create_account_step3">Sincronización con baliza</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="already_not_have_account">¿Aún no tienes una cuenta?</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_out_message">¿Quieres cerrar sesión?</string>
    <string name="sign_out_on_device">¿Quieres cerrar sesión en %1s?</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="delete_account_message">¿Quieres eliminar tu cuenta?\nSi eliminas tu cuenta, se borrará toda tu información de nuestra base de datos.</string>
    <string name="my_data">Mis datos</string>
    <string name="active_sessions">Sesiones activas</string>
    <string name="notifications">Notificaciones</string>
    <string name="help">Ayuda</string>
    <string name="continuar">Continuar</string>
    <string name="acepto">Acepto</string>
    <string name="sign_in_phone">Iniciar sesión con teléfono</string>
    <string name="sign_in_email">Iniciar sesión con correo electrónico</string>
    <string name="sign_in_phone_change">Iniciar con teléfono</string>
    <string name="sign_in_email_change">Iniciar con correo electrónico</string>
    <string name="hola_nombre">¡Hola, %1s!</string>
    <string name="hola">¡Hola!</string>
    <string name="name_surname_title">Añade tu nombre y apellidos</string>
    <string name="name_surname">Nombre y Apellidos</string>
    <string name="phone_title">Te enviaremos un mensaje de texto para verificar tu número</string>
    <string name="email_title">Te enviaremos un correo electrónico para verificar tu cuenta</string>
    <string name="phone">Teléfono</string>
    <string name="mobile_phone">Teléfono móvil</string>
    <string name="nif_title">Añade tu documento de identidad</string>
    <string name="nif">DNI</string>
    <string name="nie">NIE</string>
    <string name="cif">CIF</string>
    <string name="nif_doc_identity">Documento de identidad</string>
    <string name="email_title_signup">Por último, añade tu correo electrónico para completar tu perfil</string>
    <string name="email">Correo electrónico</string>
    <string name="privacy">Política de privacidad</string>
    <string name="sms_introduce">Introduce el código que has recibido en un SMS</string>
    <string name="omitir">Omitir</string>
    <string name="turn_on_beacon_flash">Enciende tu baliza en modo destello</string>
    <string name="search_again">Buscar de nuevo</string>
    <string name="beacon_sync_success">¡Tu baliza se ha sincronizado con éxito con tu teléfono móvil!</string>
    <string name="beacon_sync_success_desc">La baliza se ha vinculado automáticamente al vehículo que has añadido. En tu perfil podrás añadir otros vehículos y balizas.</string>
    <string name="alert_llamada_emergencias">En %1d segundos llamaremos a Emergencias.</string>
    <string name="alert_llamada_emergencias_title">Aviso a emergencias</string>
    <string name="alert_llamada_emergencias_subtitle">Has iniciado una incidencia.</string>
</resources>