<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutRootSignIn"
    android:clickable="true"
    android:background="@color/incidence100">

    <es.incidence.core.utils.view.INavigation
        android:id="@+id/inavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/incidence500"
        android:textSize="16sp"
        android:lineHeight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal_double"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_not_have_account"
        android:textColor="@color/black500"
        android:textSize="16sp"
        android:lineHeight="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:gravity="center"
        android:layout_above="@+id/txtSignIn"/>

    <ScrollView
        android:layout_below="@+id/inavigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtHaveAccount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black600"
                android:textSize="16sp"
                android:lineHeight="26dp"
                android:text="@string/create_account_step2"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="120dp"/>

            <es.incidence.core.utils.view.IField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:id="@+id/fieldLogin"/>

            <es.incidence.core.utils.view.IButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_normal_double"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:id="@+id/btnContinue"
                app:topTitle="@string/continuar"
                />

            <TextView
                android:id="@+id/txtChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_phone_change"
                android:textColor="@color/incidence500"
                android:textSize="16sp"
                android:lineHeight="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal_double"
                android:gravity="center"
                android:layout_alignParentBottom="true"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_below="@+id/inavigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutContainer"/>

</RelativeLayout>