<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutRootSignHome"
    android:clickable="true"
    android:background="@color/incidence100">

    <es.incidence.core.utils.view.INavigation
        android:id="@+id/inavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/incidence500"
        android:textSize="16sp"
        android:lineHeight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal_double"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/black500"
        android:textSize="16sp"
        android:lineHeight="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:gravity="center"
        android:layout_above="@+id/txtSignIn"/>

    <es.incidence.core.utils.view.IButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:id="@+id/btnCreate"
        app:topTitle="@string/create_one_account"
        android:layout_above="@+id/txtHaveAccount"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnCreate"
        android:layout_below="@+id/inavigation">

        <RelativeLayout
            android:id="@+id/layoutstep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="25dp"
                android:text="2"
                android:gravity="center"
                android:background="@drawable/circle_blue"
                android:id="@+id/txtStep2number"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/circle_check"
                android:visibility="gone"
                android:id="@+id/txtStep2check"/>

            <TextView
                android:layout_toRightOf="@+id/txtStep2number"
                android:layout_marginLeft="16dp"
                android:id="@+id/txtStep2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="18sp"
                android:lineHeight="28dp"
                android:text="@string/create_account_step2"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:id="@+id/layoutstep1"
            android:layout_above="@+id/layoutstep2">

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="25dp"
                android:text="1"
                android:gravity="center"
                android:background="@drawable/circle_blue"
                android:id="@+id/txtStep1number"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/circle_check"
                android:visibility="gone"
                android:id="@+id/txtStep1check"/>

            <TextView
                android:layout_toRightOf="@+id/txtStep1number"
                android:layout_marginLeft="16dp"
                android:id="@+id/txtStep1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="18sp"
                android:lineHeight="28dp"
                android:text="@string/create_account_step1"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutstep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_below="@+id/layoutstep2">

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="25dp"
                android:text="3"
                android:gravity="center"
                android:background="@drawable/circle_blue"
                android:id="@+id/txtStep3number"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/circle_check"
                android:visibility="gone"
                android:id="@+id/txtStep3check"/>

            <TextView
                android:layout_toRightOf="@+id/txtStep3number"
                android:layout_marginLeft="16dp"
                android:id="@+id/txtStep3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="18sp"
                android:lineHeight="28dp"
                android:text="@string/create_account_step3"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>